[package]
name = "chrome-devtools-rs"
version = "0.1.0"
authors = ["Avery Harnish <averyharnish@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[features]
color = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
console = "0.9"

[lib]
name = "chrome_devtools"
path = "src/lib.rs"
