[package]
name = "chrome-devtools-rs"
version = "0.1.0"
authors = ["Avery Harnish <averyharnish@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[features]
color = []
tls = ["tokio-tungstenite/tls"]

[dependencies]
console = "0.9"
futures = "0.3"
futures-util = "0.3"
http = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", default_features = false, features = ["net", "time"] }
tokio-tungstenite = "0.10"
tungstenite = "0.10"
url = "2.1"

[lib]
name = "chrome_devtools"
path = "src/lib.rs"
