[package]
name = "chrome-devtools-rs"
version = "0.0.0-alpha.0"
authors = ["Avery Harnish <averyharnish@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Low-level library for interacting with the Chrome Devtools Protocol"
repository = "https://github.com/EverlastingBugstopper/chrome-devtools-rs"

[features]
color = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
console = "0.9"
snailquote = "0.3.0"

[lib]
name = "chrome_devtools"
path = "src/lib.rs"
